# ladybird

./: vcpkg.json
Meta/gn/secondary/Libraries/LibCompress/: BUILD.gn
Meta/gn/secondary/Libraries/LibCore/: BUILD.gn
Meta/gn/secondary/Libraries/LibCrypto/: BUILD.gn
Meta/gn/secondary/Libraries/LibDevTools/: BUILD.gn
Meta/gn/secondary/Libraries/LibGC/: BUILD.gn
Meta/gn/secondary/Libraries/LibHTTP/: BUILD.gn
Meta/gn/secondary/Libraries/LibIPC/: BUILD.gn
Meta/gn/secondary/Libraries/LibLine/: BUILD.gn
Meta/gn/secondary/Libraries/LibRegex/: BUILD.gn
Meta/gn/secondary/Libraries/LibRequests/: BUILD.gn
Meta/gn/secondary/Libraries/LibTLS/: BUILD.gn
Meta/gn/secondary/Libraries/LibTextCodec/: BUILD.gn
Meta/gn/secondary/Libraries/LibURL/: BUILD.gn
Meta/gn/secondary/Libraries/LibURL/Pattern/: BUILD.gn
Meta/gn/secondary/Libraries/LibUnicode/: BUILD.gn
Meta/gn/secondary/Libraries/LibWasm/: BUILD.gn
Meta/gn/secondary/Libraries/LibWeb/: BUILD.gn  generate_idl_bindings.gni  idl_files.gni
Meta/gn/secondary/Libraries/LibWeb/ARIA/: BUILD.gn
Meta/gn/secondary/Libraries/LibWeb/Animations/: BUILD.gn
Meta/gn/secondary/Libraries/LibWeb/Bindings/: BUILD.gn
Meta/gn/secondary/Libraries/LibWeb/CSS/: BUILD.gn
Meta/gn/secondary/Libraries/LibWeb/CSS/Parser/: BUILD.gn
Meta/gn/secondary/Libraries/LibWeb/Clipboard/: BUILD.gn
Meta/gn/secondary/Libraries/LibWeb/Compression/: BUILD.gn
Meta/gn/secondary/Libraries/LibWeb/ContentSecurityPolicy/: BUILD.gn
Meta/gn/secondary/Libraries/LibWeb/Cookie/: BUILD.gn
Meta/gn/secondary/Libraries/LibWeb/CookieStore/: BUILD.gn
Meta/gn/secondary/Libraries/LibWeb/CredentialManagement/: BUILD.gn
Meta/gn/secondary/Libraries/LibWeb/Crypto/: BUILD.gn
Meta/gn/secondary/Libraries/LibWeb/DOM/: BUILD.gn
Meta/gn/secondary/Libraries/LibWeb/DOMURL/: BUILD.gn
Meta/gn/secondary/Libraries/LibWeb/Editing/: BUILD.gn
Meta/gn/secondary/Libraries/LibWeb/Encoding/: BUILD.gn
Meta/gn/secondary/Libraries/LibWeb/EncryptedMediaExtensions/: BUILD.gn
Meta/gn/secondary/Libraries/LibWeb/EntriesAPI/: BUILD.gn
Meta/gn/secondary/Libraries/LibWeb/EventTiming/: BUILD.gn
Meta/gn/secondary/Libraries/LibWeb/Fetch/: BUILD.gn
Meta/gn/secondary/Libraries/LibWeb/FileAPI/: BUILD.gn
Meta/gn/secondary/Libraries/LibWeb/GPC/: BUILD.gn
Meta/gn/secondary/Libraries/LibWeb/Gamepad/: BUILD.gn
Meta/gn/secondary/Libraries/LibWeb/Geolocation/: BUILD.gn
Meta/gn/secondary/Libraries/LibWeb/Geometry/: BUILD.gn
Meta/gn/secondary/Libraries/LibWeb/HTML/: BUILD.gn
Meta/gn/secondary/Libraries/LibWeb/HTML/Canvas/: BUILD.gn
Meta/gn/secondary/Libraries/LibWeb/HighResolutionTime/: BUILD.gn
Meta/gn/secondary/Libraries/LibWeb/IndexedDB/: BUILD.gn
Meta/gn/secondary/Libraries/LibWeb/Infra/: BUILD.gn
Meta/gn/secondary/Libraries/LibWeb/Internals/: BUILD.gn
Meta/gn/secondary/Libraries/LibWeb/IntersectionObserver/: BUILD.gn
Meta/gn/secondary/Libraries/LibWeb/Layout/: BUILD.gn
Meta/gn/secondary/Libraries/LibWeb/Loader/: BUILD.gn
Meta/gn/secondary/Libraries/LibWeb/MathML/: BUILD.gn
Meta/gn/secondary/Libraries/LibWeb/MediaCapabilitiesAPI/: BUILD.gn
Meta/gn/secondary/Libraries/LibWeb/MediaSourceExtensions/: BUILD.gn
Meta/gn/secondary/Libraries/LibWeb/MimeSniff/: BUILD.gn
Meta/gn/secondary/Libraries/LibWeb/MixedContent/: BUILD.gn
Meta/gn/secondary/Libraries/LibWeb/NavigationTiming/: BUILD.gn
Meta/gn/secondary/Libraries/LibWeb/NotificationsAPI/: BUILD.gn
Meta/gn/secondary/Libraries/LibWeb/Page/: BUILD.gn
Meta/gn/secondary/Libraries/LibWeb/Painting/: BUILD.gn
Meta/gn/secondary/Libraries/LibWeb/PerformanceTimeline/: BUILD.gn
Meta/gn/secondary/Libraries/LibWeb/PermissionsPolicy/: BUILD.gn
Meta/gn/secondary/Libraries/LibWeb/Platform/: BUILD.gn
Meta/gn/secondary/Libraries/LibWeb/ReferrerPolicy/: BUILD.gn
Meta/gn/secondary/Libraries/LibWeb/RequestIdleCallback/: BUILD.gn
Meta/gn/secondary/Libraries/LibWeb/ResizeObserver/: BUILD.gn
Meta/gn/secondary/Libraries/LibWeb/ResourceTiming/: BUILD.gn
Meta/gn/secondary/Libraries/LibWeb/SRI/: BUILD.gn
Meta/gn/secondary/Libraries/LibWeb/SVG/: BUILD.gn
Meta/gn/secondary/Libraries/LibWeb/SecureContexts/: BUILD.gn
Meta/gn/secondary/Libraries/LibWeb/Selection/: BUILD.gn
Meta/gn/secondary/Libraries/LibWeb/Serial/: BUILD.gn
Meta/gn/secondary/Libraries/LibWeb/ServiceWorker/: BUILD.gn
Meta/gn/secondary/Libraries/LibWeb/StorageAPI/: BUILD.gn
Meta/gn/secondary/Libraries/LibWeb/Streams/: BUILD.gn
Meta/gn/secondary/Libraries/LibWeb/TrustedTypes/: BUILD.gn
Meta/gn/secondary/Libraries/LibWeb/UIEvents/: BUILD.gn
Meta/gn/secondary/Libraries/LibWeb/URLPattern/: BUILD.gn
Meta/gn/secondary/Libraries/LibWeb/UserTiming/: BUILD.gn
Meta/gn/secondary/Libraries/LibWeb/ViewTransition/: BUILD.gn
Meta/gn/secondary/Libraries/LibWeb/WebAssembly/: BUILD.gn
Meta/gn/secondary/Libraries/LibWeb/WebAudio/: BUILD.gn
Meta/gn/secondary/Libraries/LibWeb/WebDriver/: BUILD.gn
Meta/gn/secondary/Libraries/LibWeb/WebGL/: BUILD.gn
Meta/gn/secondary/Libraries/LibWeb/WebIDL/: BUILD.gn
Meta/gn/secondary/Libraries/LibWeb/WebSockets/: BUILD.gn
Meta/gn/secondary/Libraries/LibWeb/WebVTT/: BUILD.gn
Meta/gn/secondary/Libraries/LibWeb/Worker/: BUILD.gn
Meta/gn/secondary/Libraries/LibWeb/XHR/: BUILD.gn
Meta/gn/secondary/Libraries/LibWeb/XLink/: BUILD.gn
Meta/gn/secondary/Libraries/LibWeb/XML/: BUILD.gn
Meta/gn/secondary/Libraries/LibWeb/XPath/: BUILD.gn
Meta/gn/secondary/Libraries/LibWebSocket/: BUILD.gn
Meta/gn/secondary/Libraries/LibWebView/: BUILD.gn
Meta/gn/secondary/Libraries/LibWebView/Plugins/: BUILD.gn
Meta/gn/secondary/Services/RequestServer/: BUILD.gn
Meta/gn/secondary/Services/WebContent/: BUILD.gn
Meta/gn/secondary/Services/WebDriver/: BUILD.gn
Meta/gn/secondary/Services/WebWorker/: BUILD.gn
Meta/gn/secondary/Tests/LibJS/: BUILD.gn
Meta/gn/secondary/Tests/LibWeb/: BUILD.gn
Meta/gn/secondary/UI/ImageDecoder/: BUILD.gn
Meta/gn/secondary/UI/WebContent/: BUILD.gn
Meta/gn/secondary/UI/WebDriver/: BUILD.gn
Meta/gn/secondary/UI/WebWorker/: BUILD.gn
Meta/gn/secondary/Utilities/: BUILD.gn
(+274 files in other folders)
