executable("js") {
  sources = [ "js.cpp" ]
  include_dirs = [ "//Libraries" ]
  deps = [
    "//AK",
    "//Libraries/LibCore",
    "//Libraries/LibJS",
    "//Libraries/LibLine",
    "//Libraries/LibMain",
    "//Libraries/LibTextCodec",
  ]
}

executable("test262-runner") {
  sources = [ "test262-runner.cpp" ]
  include_dirs = [ "//Libraries" ]
  deps = [
    "//AK",
    "//Libraries/LibCore",
    "//Libraries/LibJS",
  ]
}
