executable("js") {
  sources = [ "js.cpp" ]
  include_dirs = [ "//Libraries" ]
  deps = [
    "//AK",
    "//Libraries/LibCore",
    "//Libraries/LibCrypto",
    "//Libraries/LibJS",
    "//Libraries/LibLine",
    "//Libraries/LibUnicode",
    "//Libraries/LibMain",
    "//Libraries/LibTextCodec",
    "//Libraries/LibGC",
  ]
}

executable("test262-runner") {
  sources = [ "test262-runner.cpp" ]
  include_dirs = [ "//Libraries" ]
  deps = [
    "//AK",
    "//Libraries/LibCore",
    "//Libraries/LibJS",
  ]
}
