shared_library("LibCompress") {
  output_name = "compress"
  include_dirs = [ "//Libraries" ]
  sources = [
    "Deflate.cpp",
    "GenericZlib.cpp",
    "Gzip.cpp",
    "PackBitsDecoder.cpp",
    "Zlib.cpp",
  ]
  deps = [
    "//AK",
    "//Libraries/LibCore",
    "//Libraries/LibCrypto",
    "//Meta/gn/build/libs/zlib",
  ]
}
