import("//Meta/gn/build/libs/vulkan/enable.gni")

# These are the minimal set of sources needed to build the code generators. We separate them to allow
# LibCore to depend on generated sources.
shared_library("minimal") {
  output_name = "core-minimal"

  include_dirs = [
    "//Libraries",
    "$target_gen_dir/..",
  ]

  sources = [
    "AddressInfoVector.cpp",
    "AddressInfoVector.h",
    "ArgsParser.cpp",
    "ArgsParser.h",
    "DirIterator.cpp",
    "DirIterator.h",
    "Directory.cpp",
    "Directory.h",
    "DirectoryEntry.cpp",
    "DirectoryEntry.h",
    "Environment.cpp",
    "Environment.h",
    "File.cpp",
    "File.h",
    "Forward.h",
    "Process.h",
    "SocketAddress.cpp",
    "SocketAddress.h",
    "StandardPaths.cpp",
    "StandardPaths.h",
    "System.h",
    "Version.cpp",
    "Version.h",
  ]

  if (current_os == "win") {
    sources += [
      "ProcessWindows.cpp",
      "SocketpairWindows.cpp",
      "SystemWindows.cpp",
    ]
  } else {
    sources += [
      "Process.cpp",
      "System.cpp",
    ]
  }

  deps = [ "//AK" ]
}

source_set("sources") {
  include_dirs = [
    "//Libraries",
    "$target_gen_dir/..",
  ]
  deps = [ "//AK" ]
  sources = [
    "AnonymousBuffer.h",
    "ConfigFile.cpp",
    "ConfigFile.h",
    "DeferredInvocationContext.h",
    "ElapsedTimer.cpp",
    "ElapsedTimer.h",
    "Event.h",
    "EventLoop.cpp",
    "EventLoop.h",
    "EventLoopImplementation.cpp",
    "EventLoopImplementation.h",
    "EventLoopImplementationUnix.h",
    "EventReceiver.cpp",
    "EventReceiver.h",
    "MappedFile.cpp",
    "MappedFile.h",
    "MimeData.cpp",
    "MimeData.h",
    "NetworkResponse.h",
    "Notifier.cpp",
    "Notifier.h",
    "Platform/ProcessInfo.h",
    "Platform/ProcessStatistics.h",
    "Process.cpp",
    "Process.h",
    "Promise.h",
    "Proxy.h",
    "ReportTime.cpp",
    "ReportTime.h",
    "Resource.cpp",
    "Resource.h",
    "ResourceImplementation.cpp",
    "ResourceImplementation.h",
    "ResourceImplementationFile.cpp",
    "ResourceImplementationFile.h",
    "SharedCircularQueue.h",
    "Socket.h",
    "SocketAddress.h",
    "SystemServerTakeover.cpp",
    "SystemServerTakeover.h",
    "TCPServer.h",
    "ThreadEventQueue.cpp",
    "ThreadEventQueue.h",
    "ThreadedPromise.h",
    "Timer.cpp",
    "Timer.h",
    "UDPServer.h",
  ]

  if (current_os == "win") {
    sources += [
      "AnonymousBufferWindows.cpp",
      "EventLoopImplementationWindows.cpp",
      "SocketWindows.cpp",
      "TCPServerWindows.cpp",
      "UDPServerWindows.cpp",
    ]
  } else {
    sources += [
      "AnonymousBuffer.cpp",
      "EventLoopImplementationUnix.cpp",
      "Socket.cpp",
      "TCPServer.cpp",
      "UDPServer.cpp",
    ]
  }

  if (current_os != "android") {
    sources += [
      "LocalServer.cpp",
      "LocalServer.h",
    ]
  }
  if (current_os == "mac") {
    sources += [ "MachPort.cpp" ]
  }

  if (current_os == "linux") {
    sources += [ "Platform/ProcessStatisticsLinux.cpp" ]
  } else if (current_os == "mac") {
    sources += [
      "Platform/ProcessStatisticsMach.cpp",
      "Platform/ProcessStatisticsMach.h",
    ]
  } else {
    sources += [ "Platform/ProcessStatisticsUnimplemented.cpp" ]
  }
}

source_set("filewatcher") {
  include_dirs = [ "//Libraries" ]
  sources = [ "FileWatcher.h" ]
  deps = [ "//AK" ]
  frameworks = []
  if (current_os == "linux") {
    sources += [ "FileWatcherLinux.cpp" ]
  } else if (current_os == "mac") {
    sources += [ "FileWatcherMacOS.mm" ]
    frameworks += [
      "CoreFoundation.framework",
      "CoreServices.framework",
      "Foundation.framework",
    ]
  } else {
    sources += [ "FileWatcherUnimplemented.cpp" ]
  }
}

source_set("timezonewatcher") {
  include_dirs = [ "//Libraries" ]
  sources = [ "TimeZoneWatcher.h" ]
  deps = [ "//AK" ]
  frameworks = []
  if (current_os == "linux") {
    sources += [ "TimeZoneWatcherLinux.cpp" ]
  } else if (current_os == "mac") {
    sources += [ "TimeZoneWatcherMacOS.mm" ]
    frameworks += [
      "CoreFoundation.framework",
      "CoreServices.framework",
      "Foundation.framework",
    ]
  } else {
    sources += [ "TimeZoneWatcherUnimplemented.cpp" ]
  }
}

source_set("metal") {
  if (current_os == "mac") {
    include_dirs = [ "//Libraries" ]
    deps = [ "//AK" ]
    sources = [
      "IOSurface.cpp",
      "MetalContext.mm",
    ]
    frameworks = [
      "IOSurface.framework",
      "Metal.framework",
    ]
  }
}

shared_library("LibCore") {
  libs = []

  if (current_os == "linux" || current_os == "android") {
    libs += [ "dl" ]
  }
  if (current_os == "linux") {
    libs += [ "rt" ]
  }
  if (current_os == "android") {
    libs += [ "log" ]
  }

  output_name = "core"

  deps = [
    ":filewatcher",
    ":metal",
    ":sources",
    ":timezonewatcher",
    "//Libraries/LibURL",
    "//Libraries/LibUnicode",
    "//Meta/gn/build/libs/crypt",
    "//Meta/gn/build/libs/pthread",
  ]

  public_deps = [ ":minimal" ]
}
