shared_library("LibCrypto") {
  output_name = "crypto"
  include_dirs = [ "//Libraries" ]
  cflags_cc = [ "-Wvla" ]
  deps = [
    "//AK",
    "//Meta/gn/build/libs/openssl",
    "//Libraries/LibCore",
  ]
  sources = [
    "ASN1/ASN1.cpp",
    "ASN1/DER.cpp",
    "ASN1/PEM.cpp",
    "BigFraction/BigFraction.cpp",
    "BigInt/SignedBigInteger.cpp",
    "BigInt/UnsignedBigInteger.cpp",
    "Certificate/Certificate.cpp",
    "Cipher/AES.cpp",
    "Curves/EdwardsCurve.cpp",
    "Hash/BLAKE2b.cpp",
    "Hash/MD5.cpp",
    "Hash/SHA1.cpp",
    "Hash/SHA2.cpp",
    "PK/RSA.cpp",
    "SecureRandom.cpp",
  ]
}
