shared_library("LibCrypto") {
  output_name = "crypto"
  include_dirs = [ "//Libraries" ]
  cflags_cc = [ "-Wvla" ]
  deps = [
    "//AK",
    "//Meta/gn/build/libs/libtommath",
    "//Meta/gn/build/libs/openssl",
  ]
  sources = [
    "OpenSSL.cpp",
    "ASN1/ASN1.cpp",
    "ASN1/DER.cpp",
    "ASN1/PEM.cpp",
    "Authentication/HMAC.cpp",
    "BigFraction/BigFraction.cpp",
    "BigInt/SignedBigInteger.cpp",
    "BigInt/UnsignedBigInteger.cpp",
    "Certificate/Certificate.cpp",
    "Cipher/AES.cpp",
    "Curves/EdwardsCurve.cpp",
    "Curves/SECPxxxr1.cpp",
    "Hash/BLAKE2b.cpp",
    "Hash/HKDF.cpp",
    "Hash/MD5.cpp",
    "Hash/PBKDF2.cpp",
    "Hash/SHA1.cpp",
    "Hash/SHA2.cpp",
    "Hash/SHA3.cpp",
    "PK/RSA.cpp",
    "PK/MLDSA.cpp",
    "PK/EC.cpp",
    "SecureRandom.cpp",
  ]
}
