import("//Meta/gn/build/lagom_library.gni")

lagom_library("LibDevTools") {
  output_name = "devtools"
  include_dirs = [ "//Libraries" ]
  sources = [
    "Actor.cpp",
    "Actors/AccessibilityActor.cpp",
    "Actors/AccessibilityNodeActor.cpp",
    "Actors/AccessibilityWalkerActor.cpp",
    "Actors/CSSPropertiesActor.cpp",
    "Actors/ConsoleActor.cpp",
    "Actors/DeviceActor.cpp",
    "Actors/FrameActor.cpp",
    "Actors/HighlighterActor.cpp",
    "Actors/InspectorActor.cpp",
    "Actors/LayoutInspectorActor.cpp",
    "Actors/NodeActor.cpp",
    "Actors/PageStyleActor.cpp",
    "Actors/ParentAccessibilityActor.cpp",
    "Actors/PreferenceActor.cpp",
    "Actors/ProcessActor.cpp",
    "Actors/RootActor.cpp",
    "Actors/StyleSheetsActor.cpp",
    "Actors/TabActor.cpp",
    "Actors/TargetConfigurationActor.cpp",
    "Actors/ThreadActor.cpp",
    "Actors/ThreadConfigurationActor.cpp",
    "Actors/WalkerActor.cpp",
    "Actors/WatcherActor.cpp",
    "Connection.cpp",
    "DevToolsServer.cpp",
  ]
  deps = [
    "//AK",
    "//Libraries/LibCore",
    "//Libraries/LibWeb",
  ]
  explicit_symbol_export = true
}
