shared_library("LibHTTP") {
  output_name = "http"
  include_dirs = [ "//Libraries" ]
  sources = [
    "Header.cpp",
    "HeaderList.cpp",
    "HTTP.cpp",
    "HttpRequest.cpp",
    "Method.cpp",
  ]
  deps = [
    "//AK",
    "//Libraries/LibCompress",
    "//Libraries/LibCore",
    "//Libraries/LibTLS",
    "//Libraries/LibURL",
  ]
}
