shared_library("LibHTTP") {
  output_name = "http"
  include_dirs = [
    "//Libraries",
    "$target_gen_dir/..",
  ]
  sources = [
    "Cache/CacheEntry.cpp",
    "Cache/CacheIndex.cpp",
    "Cache/DiskCache.cpp",
    "Cache/Utilities.cpp",
    "Header.cpp",
    "HeaderList.cpp",
    "HTTP.cpp",
    "HttpRequest.cpp",
    "Method.cpp",
  ]
  deps = [
    "//AK",
    "//Libraries/LibCompress",
    "//Libraries/LibCore",
    "//Libraries/LibCrypto",
    "//Libraries/LibDatabase",
    "//Libraries/LibFileSystem",
    "//Libraries/LibIPC",
    "//Libraries/LibRegex",
    "//Libraries/LibTextCodec",
    "//Libraries/LibTLS",
    "//Libraries/LibURL",
  ]
}
