shared_library("LibIPC") {
  output_name = "ipc"
  include_dirs = [
    "//Libraries",
    # Include the gen dir because we transitively include export headers.
    "$target_gen_dir/..",
  ]
  sources = [
    "AutoCloseFileDescriptor.cpp",
    "AutoCloseFileDescriptor.h",
    "Concepts.h",
    "Connection.cpp",
    "Connection.h",
    "ConnectionFromClient.h",
    "ConnectionToServer.h",
    "Decoder.cpp",
    "Decoder.h",
    "Encoder.cpp",
    "Encoder.h",
    "File.h",
    "Forward.h",
    "Message.h",
    "MultiServer.h",
    "SingleServer.h",
    "Stub.h",
  ]

  if (current_os == "win") {
    sources += [
      "FileWindows.cpp",
      "MessageWindows.cpp",
      "TransportSocketWindows.cpp",
    ]
  } else {
    sources += [
      "File.cpp",
      "Message.cpp",
      "TransportSocket.cpp",
    ]
  }

  deps = [
    "//AK",
    "//Libraries/LibCore",
    "//Libraries/LibThreading",
    "//Libraries/LibURL",
  ]
}
