shared_library("LibLine") {
  output_name = "line"
  include_dirs = [ "//Libraries" ]
  deps = [
    "//AK",
    "//Libraries/LibCore",
    "//Libraries/LibUnicode",
  ]
  sources = [
    "Editor.cpp",
    "InternalFunctions.cpp",
    "KeyCallbackMachine.cpp",
    "SuggestionManager.cpp",
    "XtermSuggestionDisplay.cpp",
  ]
}
