import("//Meta/gn/build/compiled_action.gni")

compiled_action("RequestClientEndpoint") {
  tool = "//Meta/Lagom/Tools/CodeGenerators/IPCCompiler"
  inputs = [ "//Services/RequestServer/RequestClient.ipc" ]
  outputs = [ "$root_gen_dir/RequestServer/RequestClientEndpoint.h" ]
  args = [
    rebase_path(inputs[0], root_build_dir),
    "-o",
    rebase_path(outputs[0], root_build_dir),
  ]
}

compiled_action("RequestServerEndpoint") {
  tool = "//Meta/Lagom/Tools/CodeGenerators/IPCCompiler"
  inputs = [ "//Services/RequestServer/RequestServer.ipc" ]
  outputs = [ "$root_gen_dir/RequestServer/RequestServerEndpoint.h" ]
  args = [
    rebase_path(inputs[0], root_build_dir),
    "-o",
    rebase_path(outputs[0], root_build_dir),
  ]
}

shared_library("LibRequests") {
  output_name = "requests"
  include_dirs = [
    "//Libraries",
    "//Services",
    "$target_gen_dir/..",
  ]
  deps = [
    ":RequestClientEndpoint",
    ":RequestServerEndpoint",
    "//AK",
    "//Libraries/LibCore",
    "//Libraries/LibHTTP",
    "//Libraries/LibIPC",
  ]
  sources = [
    "CacheSizes.cpp",
    "NetworkError.h",
    "Request.cpp",
    "RequestClient.cpp",
    "RequestTimingInfo.cpp",
    "WebSocket.cpp",
  ]
  sources += get_target_outputs(":RequestClientEndpoint") +
             get_target_outputs(":RequestServerEndpoint")
}
