shared_library("LibTLS") {
  output_name = "tls"
  include_dirs = [ "//Libraries" ]
  cflags_cc = [ "-Wvla" ]
  sources = [
    "Certificate.cpp",
    "Handshake.cpp",
    "HandshakeCertificate.cpp",
    "HandshakeClient.cpp",
    "HandshakeServer.cpp",
    "Record.cpp",
    "Socket.cpp",
    "TLSv12.cpp",
  ]
  deps = [
    "//AK",
    "//Libraries/LibCore",
    "//Libraries/LibCrypto",
    "//Libraries/LibFileSystem",
  ]
}
