action("generate_encoding_indexes") {
  script = "//Meta/generate_encoding_indexes.py"

  sources = [ "//Libraries/LibTextCodec/indexes.json" ]
  outputs = [
    "$target_gen_dir/LookupTables.h",
    "$target_gen_dir/LookupTables.cpp",
  ]

  args = [
    "-h",
    rebase_path(outputs[0], root_build_dir),
    "-c",
    rebase_path(outputs[1], root_build_dir),
    "-j",
    rebase_path(sources[0]),
  ]
}

shared_library("LibTextCodec") {
  output_name = "textcodec"
  include_dirs = [
    "//Libraries",
    "$target_gen_dir/..",
  ]
  deps = [
    ":generate_encoding_indexes",
    "//AK",
  ]
  sources = [
    "Decoder.cpp",
    "Encoder.cpp",
  ]
  sources += get_target_outputs(":generate_encoding_indexes")
}
