shared_library("LibURL") {
  output_name = "url"
  include_dirs = [ "//Libraries" ]
  sources = [
    "Forward.h",
    "Host.h",
    "Origin.cpp",
    "Origin.h",
    "Parser.cpp",
    "Parser.h",
    "URL.cpp",
    "URL.h",
  ]
  deps = [
    "//AK",
    "//Libraries/LibTextCodec",
    "//Libraries/LibUnicode",
  ]
}
