import("//Meta/gn/build/download_cache.gni")
import("//Meta/gn/build/download_file.gni")

declare_args() {
  # If true, Download public suffix list from GitHub.
  # Data will be downloaded to $cache_path/PublicSuffix and used by LibPublicSuffix
  enable_public_suffix_list_download = true
}

public_suffix_cache = cache_path + "PublicSuffix/"

if (enable_public_suffix_list_download) {
  download_file("public_suffix_list_download") {
    version = "master"
    url = "https://raw.githubusercontent.com/publicsuffix/list/" + version +
          "/public_suffix_list.dat"
    output = "$public_suffix_cache/public_suffix_list.dat"
    version_file = public_suffix_cache + "version.txt"
  }

  action("generate_public_suffix_list_sources") {
    script = "//Meta/generate_public_suffix_data.py"
    deps = [ ":public_suffix_list_download" ]
    outputs = [
      "$target_gen_dir/PublicSuffixData.h",
      "$target_gen_dir/PublicSuffixData.cpp",
    ]
    args = [
      "-h",
      rebase_path(outputs[0], root_build_dir),
      "-c",
      rebase_path(outputs[1], root_build_dir),
      "-p",
      rebase_path("$public_suffix_cache/public_suffix_list.dat",
                  root_build_dir),
    ]
  }
}

config("configs") {
  include_dirs = [
    "//Libraries",
    "$target_gen_dir/..",
  ]
  configs = [ "//AK:ak_headers" ]
}

shared_library("LibURL") {
  output_name = "url"
  public_configs = [ ":configs" ]
  sources = [
    "Forward.h",
    "Host.cpp",
    "Host.h",
    "Origin.cpp",
    "Origin.h",
    "Parser.cpp",
    "Parser.h",
    "Site.cpp",
    "Site.h",
    "URL.cpp",
    "URL.h",
  ]
  deps = [
    "Pattern",
    "//AK",
    "//Libraries/LibCrypto",
    "//Libraries/LibRegex",
    "//Libraries/LibTextCodec",
    "//Libraries/LibUnicode",
  ]
  if (enable_public_suffix_list_download) {
    deps += [ ":generate_public_suffix_list_sources" ]
    sources += get_target_outputs(":generate_public_suffix_list_sources")
    defines = [ "ENABLE_PUBLIC_SUFFIX=1" ]
  } else {
    defines = [ "ENABLE_PUBLIC_SUFFIX=0" ]
  }
}
