source_set("LibUnicode") {
  output_name = "unicode"
  include_dirs = [ "//Libraries" ]
  sources = [
    "CharacterTypes.cpp",
    "CharacterTypes.h",
    "Collator.cpp",
    "Collator.h",
    "CurrencyCode.cpp",
    "CurrencyCode.h",
    "DateTimeFormat.cpp",
    "DateTimeFormat.h",
    "DisplayNames.cpp",
    "DisplayNames.h",
    "DurationFormat.cpp",
    "DurationFormat.h",
    "Forward.h",
    "ICU.cpp",
    "ICU.h",
    "IDNA.cpp",
    "IDNA.h",
    "ListFormat.cpp",
    "ListFormat.h",
    "Locale.cpp",
    "Locale.h",
    "Normalize.cpp",
    "Normalize.h",
    "NumberFormat.cpp",
    "NumberFormat.h",
    "PartitionRange.h",
    "PluralRules.cpp",
    "PluralRules.h",
    "RelativeTimeFormat.cpp",
    "RelativeTimeFormat.h",
    "Segmenter.cpp",
    "Segmenter.h",
    "String.cpp",
    "TimeZone.cpp",
    "TimeZone.h",
    "UnicodeKeywords.cpp",
    "UnicodeKeywords.h",
    "Utf16String.cpp",
  ]
  deps = [
    "//AK",
    "//Meta/gn/build/libs/icu",
  ]
}
