import("//Meta/gn/build/lagom_library.gni")

declare_args() {
  # If true, download wasm spec tests from github.
  # Tests will be used by test-wasm to verify spec compliance
  include_wasm_spec_tests = false
}

if (include_wasm_spec_tests) {
  # FIXME: Port wasm_spec_tests.cmake
}

lagom_library("LibWasm") {
  output_name = "wasm"
  include_dirs = [ "//Libraries" ]
  sources = [
    "AbstractMachine/AbstractMachine.cpp",
    "AbstractMachine/BytecodeInterpreter.cpp",
    "AbstractMachine/Configuration.cpp",
    "AbstractMachine/Validator.cpp",
    "Parser/Parser.cpp",
    "Printer/Printer.cpp",
    "WASI/Wasi.cpp",
  ]
  deps = [
    "//AK",
    "//Libraries/LibCore",
    "//Libraries/LibJS",
  ]
  explicit_symbol_export = true
}
