import("//Meta/gn/build/compiled_action.gni")
import("//Meta/gn/build/embed_as_string.gni")
import("generate_idl_bindings.gni")
import("idl_files.gni")

template("generate_code_from_input") {
  name = target_name
  output_header = "${target_gen_dir}/${invoker.header}"
  output_implementation = "${target_gen_dir}/${invoker.implementation}"

  compiled_action(name) {
    tool = "//Meta/Lagom/Tools/CodeGenerators/LibWeb:${invoker.tool}"
    inputs = [ invoker.input ]
    outputs = [
      output_header,
      output_implementation,
    ]
    args = [
      "-h",
      rebase_path(output_header, root_build_dir),
      "-c",
      rebase_path(output_implementation, root_build_dir),
    ]

    if (defined(invoker.idl)) {
      idl_output = "${target_gen_dir}/${invoker.idl}"
      outputs += [ idl_output ]
      args += [
        "-i",
        rebase_path(idl_output, root_build_dir),
      ]
    }

    args += [
      "-j",
      rebase_path(inputs[0], root_build_dir),
    ]
  }

  source_set("${name}_outputs") {
    deps = [ ":$name" ]
    sources = [
      output_header,
      output_implementation,
    ]
    configs += [ "//Libraries/LibWeb:configs" ]
  }
}

generate_code_from_input("generate_css_style_properties") {
  tool = "GenerateCSSStyleProperties"
  input = "CSS/Properties.json"
  header = "CSS/GeneratedCSSStyleProperties.h"
  implementation = "CSS/GeneratedCSSStyleProperties.cpp"
  idl = "CSS/GeneratedCSSStyleProperties.idl"
}

generate_code_from_input("generate_css_numeric_factory_methods") {
  tool = "GenerateCSSNumericFactoryMethods"
  input = "CSS/Units.json"
  header = "CSS/GeneratedCSSNumericFactoryMethods.h"
  implementation = "CSS/GeneratedCSSNumericFactoryMethods.cpp"
  idl = "CSS/GeneratedCSSNumericFactoryMethods.idl"
}

generated_idl_file_targets = [
  ":generate_css_style_properties",
  ":generate_css_numeric_factory_methods",
]

generate_idl_bindings("standard_idl_bindings") {
  idl_list = standard_idl_files
  type = "standard"
  deps = generated_idl_file_targets
}

generate_idl_bindings("iterable_idl_bindings") {
  idl_list = iterable_idl_files
  type = "iterable"
  deps = generated_idl_file_targets
}

generate_idl_bindings("async_iterable_idl_bindings") {
  idl_list = async_iterable_idl_files
  type = "async_iterable"
  deps = generated_idl_file_targets
}

generate_idl_bindings("namespace_idl_bindings") {
  idl_list = namespace_idl_files
  type = "namespace"
  deps = generated_idl_file_targets
}

generate_idl_bindings("global_idl_bindings") {
  idl_list = global_idl_files
  type = "global"
  deps = generated_idl_file_targets
}

generate_idl_targets = [
  ":standard_idl_bindings_generated",
  ":iterable_idl_bindings_generated",
  ":async_iterable_idl_bindings_generated",
  ":namespace_idl_bindings_generated",
  ":global_idl_bindings_generated",
]

idl_sources_targets = [
  ":standard_idl_bindings_sources",
  ":iterable_idl_bindings_sources",
  ":async_iterable_idl_bindings_sources",
  ":namespace_idl_bindings_sources",
  ":global_idl_bindings_sources",
]

compiled_action("WebWorkerClientEndpoint") {
  tool = "//Meta/Lagom/Tools/CodeGenerators/IPCCompiler"
  inputs = [ "//Libraries/LibWeb/Worker/WebWorkerClient.ipc" ]
  outputs = [ "$root_gen_dir/LibWeb/Worker/WebWorkerClientEndpoint.h" ]
  args = [
    rebase_path(inputs[0], root_build_dir),
    "-o",
    rebase_path(outputs[0], root_build_dir),
  ]
}

compiled_action("WebWorkerServerEndpoint") {
  tool = "//Meta/Lagom/Tools/CodeGenerators/IPCCompiler"
  inputs = [ "//Libraries/LibWeb/Worker/WebWorkerServer.ipc" ]
  outputs = [ "$root_gen_dir/LibWeb/Worker/WebWorkerServerEndpoint.h" ]
  args = [
    rebase_path(inputs[0], root_build_dir),
    "-o",
    rebase_path(outputs[0], root_build_dir),
  ]
}

compiled_action("generate_window_or_worker_interfaces") {
  tool = "//Meta/Lagom/Tools/CodeGenerators/LibWeb:GenerateWindowOrWorkerInterfaces"
  inputs = all_idl_files
  outputs = [
    "$target_gen_dir/Bindings/IntrinsicDefinitions.cpp",
    "$target_gen_dir/Bindings/DedicatedWorkerExposedInterfaces.cpp",
    "$target_gen_dir/Bindings/DedicatedWorkerExposedInterfaces.h",
    "$target_gen_dir/Bindings/SharedWorkerExposedInterfaces.cpp",
    "$target_gen_dir/Bindings/SharedWorkerExposedInterfaces.h",
    "$target_gen_dir/Bindings/ShadowRealmExposedInterfaces.cpp",
    "$target_gen_dir/Bindings/ShadowRealmExposedInterfaces.h",
    "$target_gen_dir/Bindings/WindowExposedInterfaces.cpp",
    "$target_gen_dir/Bindings/WindowExposedInterfaces.h",
  ]
  args = [
    "-o",
    rebase_path("$target_gen_dir/Bindings", root_build_dir),
    "-b",
    rebase_path("//Libraries/LibWeb", root_build_dir),
    "-b",
    rebase_path(target_gen_dir, root_build_dir),
  ]
  foreach(idl, inputs) {
    args += [ rebase_path(idl, root_build_dir) ]
  }
  deps = generated_idl_file_targets
}

compiled_action("generate_aria_roles") {
  tool = "//Meta/Lagom/Tools/CodeGenerators/LibWeb:GenerateAriaRoles"
  inputs = [ "ARIA/AriaRoles.json" ]
  outputs = [
    "$target_gen_dir/ARIA/AriaRoles.h",
    "$target_gen_dir/ARIA/AriaRoles.cpp",
  ]
  args = [
    "-h",
    rebase_path(outputs[0], root_build_dir),
    "-c",
    rebase_path(outputs[1], root_build_dir),
    "-j",
    rebase_path(inputs[0], root_build_dir),
  ]
}

generate_code_from_input("generate_css_descriptors") {
  tool = "GenerateCSSDescriptors"
  input = "CSS/Descriptors.json"
  header = "CSS/DescriptorID.h"
  implementation = "CSS/DescriptorID.cpp"
}

generate_code_from_input("generate_css_enums") {
  tool = "GenerateCSSEnums"
  input = "CSS/Enums.json"
  header = "CSS/Enums.h"
  implementation = "CSS/Enums.cpp"
}

generate_code_from_input("generate_css_environment_variables") {
  tool = "GenerateCSSEnvironmentVariable"
  input = "CSS/EnvironmentVariables.json"
  header = "CSS/EnvironmentVariable.h"
  implementation = "CSS/EnvironmentVariable.cpp"
}

generate_code_from_input("generate_css_math_functions") {
  tool = "GenerateCSSMathFunctions"
  input = "CSS/MathFunctions.json"
  header = "CSS/MathFunctions.h"
  implementation = "CSS/MathFunctions.cpp"
}

generate_code_from_input("generate_css_media_feature_id") {
  tool = "GenerateCSSMediaFeatureID"
  input = "CSS/MediaFeatures.json"
  header = "CSS/MediaFeatureID.h"
  implementation = "CSS/MediaFeatureID.cpp"
}

compiled_action("generate_css_property_id") {
  tool = "//Meta/Lagom/Tools/CodeGenerators/LibWeb:GenerateCSSPropertyID"
  inputs = [
    "CSS/Properties.json",
    "CSS/Enums.json",
    "CSS/LogicalPropertyGroups.json",
  ]
  outputs = [
    "$target_gen_dir/CSS/PropertyID.h",
    "$target_gen_dir/CSS/PropertyID.cpp",
  ]
  args = [
    "-h",
    rebase_path(outputs[0], root_build_dir),
    "-c",
    rebase_path(outputs[1], root_build_dir),
    "-j",
    rebase_path(inputs[0], root_build_dir),
    "-e",
    rebase_path(inputs[1], root_build_dir),
    "-g",
    rebase_path(inputs[2], root_build_dir),
  ]
}

generate_code_from_input("generate_css_pseudo_class") {
  tool = "GenerateCSSPseudoClass"
  input = "CSS/PseudoClasses.json"
  header = "CSS/PseudoClass.h"
  implementation = "CSS/PseudoClass.cpp"
}

generate_code_from_input("generate_css_pseudo_element") {
  tool = "GenerateCSSPseudoElement"
  input = "CSS/PseudoElements.json"
  header = "CSS/PseudoElement.h"
  implementation = "CSS/PseudoElement.cpp"
}

generate_code_from_input("generate_css_transform_functions") {
  tool = "GenerateCSSTransformFunctions"
  input = "CSS/TransformFunctions.json"
  header = "CSS/TransformFunctions.h"
  implementation = "CSS/TransformFunctions.cpp"
}

generate_code_from_input("generate_css_units") {
  tool = "GenerateCSSUnits"
  input = "CSS/Units.json"
  header = "CSS/Units.h"
  implementation = "CSS/Units.cpp"
}

generate_code_from_input("generate_css_keyword") {
  tool = "GenerateCSSKeyword"
  input = "CSS/Keywords.json"
  header = "CSS/Keyword.h"
  implementation = "CSS/Keyword.cpp"
}

embed_as_string("generate_default_stylesheet_source") {
  input = "CSS/Default.css"
  output = "$target_gen_dir/CSS/DefaultStyleSheetSource.cpp"
  variable_name = "default_stylesheet_source"
  namespace = "Web::CSS"
}

embed_as_string("generate_mathml_stylesheet_source") {
  input = "MathML/Default.css"
  output = "$target_gen_dir/MathML/MathMLStyleSheetSource.cpp"
  variable_name = "mathml_stylesheet_source"
  namespace = "Web::CSS"
}

embed_as_string("generate_svg_stylesheet_source") {
  input = "SVG/Default.css"
  output = "$target_gen_dir/SVG/SVGStyleSheetSource.cpp"
  variable_name = "svg_stylesheet_source"
  namespace = "Web::CSS"
}

embed_as_string("generate_quirks_mode_stylesheet_source") {
  input = "CSS/QuirksMode.css"
  output = "$target_gen_dir/CSS/QuirksModeStyleSheetSource.cpp"
  variable_name = "quirks_mode_stylesheet_source"
  namespace = "Web::CSS"
}

generate_code_from_input("generate_named_character_references") {
  tool = "GenerateNamedCharacterReferences"
  input = "HTML/Parser/Entities.json"
  header = "HTML/Parser/NamedCharacterReferences.h"
  implementation = "HTML/Parser/NamedCharacterReferences.cpp"
}

source_set("all_generated") {
  generated_deps = [
    ":WebWorkerClientEndpoint",
    ":WebWorkerServerEndpoint",
    ":generate_aria_roles",
    ":generate_css_descriptors",
    ":generate_css_enums",
    ":generate_css_environment_variables",
    ":generate_css_keyword",
    ":generate_css_math_functions",
    ":generate_css_media_feature_id",
    ":generate_css_property_id",
    ":generate_css_pseudo_class",
    ":generate_css_pseudo_element",
    ":generate_css_transform_functions",
    ":generate_css_units",
    ":generate_default_stylesheet_source",
    ":generate_mathml_stylesheet_source",
    ":generate_named_character_references",
    ":generate_quirks_mode_stylesheet_source",
    ":generate_svg_stylesheet_source",
    ":generate_window_or_worker_interfaces",
  ]
  configs += [ ":configs" ]
  sources = []
  foreach(dep, generated_deps) {
    sources += get_target_outputs(dep)
  }
  deps = generated_deps + generate_idl_targets
  foreach(dep, generated_idl_file_targets) {
    deps += [ "${dep}_outputs" ]
  }
}

config("configs") {
  include_dirs = [
    "//Libraries",
    "//Services",  # FIXME: BackingStoreManager lives in WebContent
    "$target_gen_dir/..",
  ]
  configs = [ "//AK:ak_headers" ]
}

shared_library("LibWeb") {
  output_name = "web"
  public_configs = [ ":configs" ]
  sources = [
    "Dump.cpp",
    "Namespace.cpp",
    "PixelUnits.cpp",
  ]
  deps = [
    ":all_generated",
    "ARIA",
    "Animations",
    "Bindings",
    "CSS",
    "Clipboard",
    "Cookie",
    "CookieStore",
    "Crypto",
    "DOM",
    "DOMURL",
    "Encoding",
    "EntriesAPI",
    "EventTiming",
    "Fetch",
    "FileAPI",
    "Geolocation",
    "Geometry",
    "HTML",
    "HighResolutionTime",
    "IndexedDB",
    "Infra",
    "Internals",
    "IntersectionObserver",
    "Layout",
    "Loader",
    "MathML",
    "MediaCapabilitiesAPI",
    "MediaSourceExtensions",
    "MimeSniff",
    "MixedContent",
    "NavigationTiming",
    "Page",
    "Painting",
    "PerformanceTimeline",
    "PermissionsPolicy",
    "Platform",
    "ReferrerPolicy",
    "RequestIdleCallback",
    "ResizeObserver",
    "SRI",
    "SVG",
    "SecureContexts",
    "Selection",
    "ServiceWorker",
    "StorageAPI",
    "Streams",
    "UIEvents",
    "UserTiming",
    "WebAssembly",
    "WebAudio",
    "WebDriver",
    "WebGL",
    "WebIDL",
    "WebSockets",
    "WebVTT",
    "Worker",
    "XHR",
    "XLink",
    "XML",
    "//AK",
    "//Meta/gn/build/libs/skia",
    "//Meta/gn/build/libs/vulkan",
    "//Libraries/LibCore",
    "//Libraries/LibCrypto",
    "//Libraries/LibGfx",
    "//Libraries/LibHTTP",
    "//Libraries/LibIDL",
    "//Libraries/LibIPC",
    "//Libraries/LibJS",
    "//Libraries/LibMedia",
    "//Libraries/LibRegex",
    "//Libraries/LibRequests",
    "//Libraries/LibSyntax",
    "//Libraries/LibTLS",
    "//Libraries/LibTextCodec",
    "//Libraries/LibURL",
    "//Libraries/LibUnicode",
    "//Libraries/LibWasm",
    "//Libraries/LibXML",
  ]
  deps += idl_sources_targets
}
